Fixed login html to display proper symbols

--- a/Project/login.html
+++ b/Project/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8"> 
     <title>Login | NG Auto</title>
     <link rel="stylesheet" href="css/login.css">
 </head>
