--- a/Project/login.html
+++ b/Project/login.html
@@ -42,7 +42,7 @@
 
         <p class="register">
             Don’t have an account?
-            <a href="register.html">Register here</a>
+            <a href="register.php">Register here</a>
         </p>
 </form>
     </div>
