Initial structure to works on manage_cars page

--- a/Project/admin_dashboard.html
+++ b/Project/admin_dashboard.html
@@ -54,7 +54,7 @@
 
     <div class="actions-wrapper">
         <div class="admin-actions">
-            <a href="#" class="admin-btn">Manage Cars</a>
+            <a href="manage_Cars.html" class="admin-btn">Manage Cars</a>
             <a href="#" class="admin-btn">Manage Categories</a>
             <a href="#" class="admin-btn">View Orders</a>
             <a href="#" class="admin-btn">Marketplace</a>
