Modified the admin_marketplace.html as per new requirements

--- a/Project/admin_marketplace.html
+++ b/Project/admin_marketplace.html
@@ -13,12 +13,10 @@
         <div class="brand">
             <img src="images/logo.png" alt="NG Auto">
             <span>NG AUTO</span>
-            </div>
-
+        </div>
         <a href="admin_dashboard.html" class="back">← Back to Dashboard</a>
     </div>
-        
- </header>
+</header>
 
 <main>
 
@@ -30,13 +28,12 @@
         <thead>
             <tr>
                 <th>Image</th>
-                <th>Title</th>
-                <th>Seller</th>
+                <th>Car Name</th>
                 <th>Brand</th>
-                <th>Model</th>
-                <th>Condition</th>
                 <th>Location</th>
+                <th>Condition</th>
                 <th>Price</th>
+                <th>Phone Number</th>
                 <th>Status</th>
                 <th>Actions</th>
             </tr>
@@ -46,34 +43,58 @@
             <tr>
                 <td><img src="images/cars/bmw_x5.png" class="car-thumb"></td>
                 <td>BMW X5 2019</td>
-                <td>John Doe</td>
                 <td>BMW</td>
-                <td>X5</td>
-                <td>Used</td>
                 <td>New York</td>
+                <td>Used</td>
                 <td>$42,000</td>
+                <td>+1 555-234-9988</td>
                 <td>Pending</td>
+
                 <td>
-                    <button class="save">Approve</button>
-                    <button class="cancel">Reject</button>
-                    <button class="delete">Delete</button>
+                    <form method="post" action="#">
+                        <label>Comment:</label><br>
+                        <textarea name="comment" rows="3" style="width:100%;"></textarea>
+
+                        <div style="margin-top:8px;">
+                            <button class="save" type="submit" name="action" value="approve">
+                                Approve
+                            </button>
+                            <button class="cancel" type="submit" name="action" value="reject">
+                                Reject
+                            </button>
+                            <button class="delete" type="submit" name="action" value="delete">
+                                Delete
+                            </button>
+                        </div>
+                    </form>
                 </td>
             </tr>
-
             <tr>
                 <td><img src="images/cars/audi_a6.png" class="car-thumb"></td>
                 <td>Audi A6 2020</td>
-                <td>Sarah Khan</td>
                 <td>Audi</td>
-                <td>A6</td>
-                <td>Like New</td>
                 <td>California</td>
+                <td>Like New</td>
                 <td>$48,000</td>
+                <td>+1 555-887-4412</td>
                 <td>Approved</td>
+
                 <td>
-                    <button class="delete">Remove</button>
+                    <form method="post" action="#">
+                        <label>Comment:</label><br>
+                        <textarea rows="3" style="width:100%;" disabled>
+Approved listing
+                        </textarea>
+
+                        <div style="margin-top:8px;">
+                            <button class="delete" type="submit" name="action" value="delete">
+                                Remove
+                            </button>
+                        </div>
+                    </form>
                 </td>
             </tr>
+
         </tbody>
     </table>
 
